2001-10-19  Kevin Ryde <user42@zip.com.au>

	* lib/am/check.am (check-TESTS): Add an "else true" to work with
	Ultrix 4.5 /bin/sh when $(TESTS) is empty.

2001-10-16  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/Makefile.am (TESTS, XFAIL_TESTS): Add nobase.test.
	* tests/nobase.test: New file.  Based on a bug report
	from Martin Frydl <martin@idoox.com>.

2001-10-16  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (am_install_var): Don't strip nobase_ from $X, do
	this with $nodir_name only.  Use $nodir_name where appropriate.

2001-10-15  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_languages, handle_single_transform_list,
	lang_c_rewrite): Use require_conf_file instead of
	require_config_file to require depcomp or compile from Makefile.am.
	(require_aux_file_with_line): New function, adapted from
	require_conf_gile_with_line.
	(require_conf_file_with_line, require_conf_file_with_conf_line):
	Simplify using require_aux_file_with_line.
	(require_config_file): Simplify using require_conf_file_with_conf_line.
	(require_conf_file): New function.

2001-10-15  Akim Demaille  <akim@epita.fr>

	* m4/depend.m4 (AM_DEP_TRACK): Use AC_SUBST([AMDEPBACKSLASH])
	normally, what is wrong is that automake outputs a variable
	definition for it, hence...
	* automake.in (scan_one_autoconf_file): don't.

	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): New, extracted
	from...
	(AM_OUTPUT_DEPENDENCY_COMMANDS): here.  Adjust.
	Use AC_CONFIG_COMMANDS.
	(_AM_OUTPUT_DEPENDENCY_COMMANDS): Use AS_DIRNAME and AS_MKDIR_P.


2001-10-15  Akim Demaille  <akim@epita.fr>

	* m4/header.m4 (AM_CONFIG_HEADER): Don't use m4_patsubst.

2001-10-15  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_conditions): Be deterministic and Perl
	version independent: sort the result.
	(&variable_output, &variable_pretty_output): Sort all the @conds,
	not only when defaulted.
	* tests/cond3.test: Adjust.

2001-10-15  Akim Demaille  <akim@epita.fr>
