@@ -6887,8 +6887,9 @@ sub read_main_am_file
 
     # Generate copyright header for generated Makefile.in.
     # We do discard the output of predefined variables, handled below.
-    $output_vars = ("# $in_file_name generated automatically by automake "
+    $output_vars = ("# $in_file_name generated by automake "
 		   . $VERSION . " from $am_file_name.\n");
+    $output_vars .= '# ' . subst ('configure_input') . "\n";
     $output_vars .= $gen_copyright;
 
     # We want to predefine as many variables as possible.  This lets
