@@ -1,3 +1,10 @@
+2001-10-19  Akim Demaille  <akim@epita.fr>
+
+	* automake.in (&read_main_am_file): s/generated automatically/
+	generated/.
+	Insert @configure_input@, since 2.50 no longer output this
+	automatically for Makefiles.
+
 2001-10-19  Kevin Ryde <user42@zip.com.au>
 
 	* lib/am/check.am (check-TESTS): Add an "else true" to work with
